test/spec_vectors/data/ok/module_28.wat
(module (memory 1) (data (i32.sub (i32.const 42) (i32.const 0))))