test/spec_vectors/data/fail/module_57.wat
(module (memory 1) (data (i32.ctz (i32.const 0))))